Add documentation for Exception, Lexer, and Literal

--- a/Documentation/html/class_expression_literal.html
+++ b/Documentation/html/class_expression_literal.html
@@ -337,7 +337,7 @@ Additional Inherited Members</h2></td></tr>
   </table>
   </dd>
 </dl>
-<dl class="section return"><dt>Returns</dt><dd>the concatenation of the operator <em>op</em> and the two expressions (the one given as a parameter and the implicit one) </dd></dl>
+<dl class="section return"><dt>Returns</dt><dd>The concatenation of the operator <em>op</em> and the two expressions (the one given as a parameter and the implicit one) </dd></dl>
 
 </div>
 </div>
